--- a/explore-designers.html
+++ b/explore-designers.html
@@ -3,24 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Explore Designers - MatchUp</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Explore Designers - DesignMatch | Connect with Designers, Architects & Contractors</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
     <header>
-        <nav>
-            <div class="logo">
-                <span>Design</span><span>Match</span>
-            </div>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="explore-designers.html">Designers</a></li>
-                <li><a href="explore-architects.html">Architects</a></li>
-                <li><a href="explore-contractors.html">Contractors</a></li> <li><a href="rankings.html">Rankings</a></li>
-                <li><a href="login.html">Login</a></li> <li><a href="signup.html" class="button">Sign Up</a></li> <li><a href="#" id="dashboardLink">Dashboard</a></li>
-                <li><a href="#" id="logoutButton">Logout</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <div class="logo">
+          <span>Design</span><span>Match</span>
+        </div>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="explore-designers.html">Designers</a></li>
+          <li><a href="explore-architects.html">Architects</a></li>
+          <li><a href="explore-contractors.html">Contractors</a></li>
+          <li><a href="rankings.html">Rankings</a></li>
+          <li><a href="login.html">Login</a></li>
+          <li><a href="signup.html" class="button">Sign Up</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main class="container">
@@ -33,18 +37,42 @@
                 <option value="Commercial">Commercial</option>
                 <option value="Kitchen Design">Kitchen Design</option>
                 <option value="Bathroom Design">Bathroom Design</option>
-                </select>
+            </select>
             <button id="applyFilters">Apply Filters</button>
         </div>
 
         <div id="designerList" class="professional-list">
             <p>Loading designers...</p>
+            <div class="professional-card">
+                <img src="https://via.placeholder.com/100" alt="Ellie Profile Picture">
+                <h3>Ellie</h3>
+                <p>Specialization: Home renovation, budget, cheap</p>
+                <p>Experience: 15 years</p>
+                <p class="rating">Rating: N/A (0 reviews)</p>
+                <a href="profile.html?id=ellie" class="button primary">View Profile</a>
+            </div>
+            <div class="professional-card">
+                <img src="https://via.placeholder.com/100" alt="Marie Kondo Profile Picture">
+                <h3>Marie Kondo</h3>
+                <p>Specialization: Minimalism</p>
+                <p>Experience: 15 years</p>
+                <p class="rating">Rating: N/A (0 reviews)</p>
+                <a href="profile.html?id=mariekondo" class="button primary">View Profile</a>
+            </div>
+            <div class="professional-card">
+                <img src="https://via.placeholder.com/100" alt="Lin Ay Designer Profile Picture">
+                <h3>Lin Ay Designer</h3>
+                <p>Specialization: Interior Design</p>
+                <p>Experience: 20 years</p>
+                <p class="rating">Rating: N/A (0 reviews)</p>
+                <a href="profile.html?id=linay" class="button primary">View Profile</a>
+            </div>
         </div>
         <div id="message" style="margin-top: 15px; text-align: center; color: red;"></div>
     </main>
 
     <footer>
-        <p>&copy; 2025 MatchUp. All rights reserved.</p>
+        <p>&copy; 2025 DesignMatch. Connecting great ideas with great talent.</p>
     </footer>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-app-compat.js"></script>
@@ -52,9 +80,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.0/firebase-firestore-compat.js"></script>
 
     <script src="js/firebase-config.js"></script>
-
     <script src="js/main.js"></script>
-
     <script src="js/explore-designers.js"></script>
 
 </body>
