--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
     </header>
 
     <main class="container">
-        <h2>Login to Your DesignMatchatch Account</h2>
+        <h2>Login to Your DesignMatch Account</h2>
         <form id="loginForm">
             <div class="form-group">
                 <label for="email">Email Address</label>
